--- a/style.css
+++ b/style.css
@@ -580,6 +580,20 @@ a:active {
   clear: both;
   margin: 0 0 1.5em; }
 
+/*  Archive page centered markup*/
+
+.row-centered {
+    text-align:center;
+}
+.col-centered {
+    display:inline-block;
+    float:none;
+    /* reset the text-align */
+    text-align:left;
+    /* inline-block space fix */
+    margin-right:-4px;
+}
+
 /*--------------------------------------------------------------
 10.2 Asides
 --------------------------------------------------------------*/
@@ -2256,7 +2270,7 @@ hr {
         width: 970px
     }
 }
-@media (min-width: 1200px) {
+@media (min-width: 1367px) {
     .container {
         width: 1170px
     }
@@ -2749,7 +2763,7 @@ hr {
         margin-left: 0
     }
 }
-@media (min-width: 1200px) {
+@media (min-width: 1367px) {
     .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
         float: left
     }
